@@ -1,0 +1,44 @@
+{% extends "two_columns.html" %}
+
+<!-- $Id$ -->
+
+{% block title %}Home{% endblock %}
+
+{% block content %}
+
+  <div class="contactpage">
+    
+    <div>Participate in online discussions, find support, and suggest new
+      features via the castsampler google group:</div>
+    
+    <table style="margin-top: 1em; border:1px solid #aa0033; font-size:small" align="center">
+      <tr>
+        <td rowspan="3">
+          <img src="http://groups.google.com/groups/img/groups_medium.gif" height="58" width="150" alt="Google Groups">
+        </td>
+        <td colspan="2" align="center"><b>Subscribe to castsampler</b></td>
+      </tr>
+      <form action="http://groups.google.com/group/castsampler/boxsubscribe">
+        <tr> 
+          <td>Email: <input type="text" name="email" /></td>
+          <td>
+            <table style="background-color:#ffcc33;padding:2px;border:2px outset #ffcc33;">
+              <tr><td><input type="submit" name="sub" value="Subscribe"></td></tr>
+            </table>
+          </td>
+        </tr>
+      </form>
+      <tr>
+        <td colspan="2" align="center">
+          <a href="http://groups.google.com/group/castsampler">Browse
+            Archives</a> at 
+          <a href="http://groups.google.com/">groups.google.com</a>
+        </td>
+      </tr>
+    </table>
+    
+  </div>
+  {% endblock %}
+  
+{% block sidebar_r %}
+{% endblock %}
